--- a/all.css
+++ b/all.css
@@ -2,48 +2,135 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 /* 基本樣式設定 */
@@ -51,41 +138,65 @@ body {
     font-family: helvetica, arial, sans-serif;
     margin: 2em;
     color: #3D3D3D;
-  }
-  
-  h1 {
-    font-size: 24px;
+   
+}
+
+h1 {
+    font-size: 22px;
     font-style: italic;
     color: #FF6F00;
     padding-bottom: 5px;
-  }
-  
-  video {
+    text-align: center;    
+}
+.step{
+    width: 350px;
+    margin: 0 auto;
+}
+#webcamButton{
+    width: 100px;
+    padding: 20px;
+    background-color:rgb(248, 255, 40);
+    font-size: 14px;
+}
+
+video {
     display: block;
-  }
-  
-  section {
+    margin: 0 auto;    
+}
+
+section {
     opacity: 1;
     transition: opacity 500ms ease-in-out;
-  }
+}
 
-  .removed {
+h2 {
+    display: block;
+    text-align: center;
+    padding: 3px;
+}
+
+img {
+    display: block;
+    margin: 0 auto;
+}
+
+.removed {
     display: none;
-  }
-  
-  .invisible {
+}
+
+.invisible {
     opacity: 0.2;
-  }
-  
-  .camView {
+}
+
+.camView {
     position: relative;
     float: left;
     width: calc(100% - 20px);
     margin: 10px;
     cursor: pointer;
-  }
-  
-  .camView p {
+}
+
+.camView p {
     position: absolute;
     padding: 5px;
     background-color: rgba(255, 111, 0, 0.85);
@@ -93,11 +204,11 @@ body {
     border: 1px dashed rgba(255, 255, 255, 0.7);
     z-index: 2;
     font-size: 12px;
-  }
-  
-  .highlighter {
+}
+
+.highlighter {
     background: rgba(0, 255, 0, 0.25);
     border: 1px dashed #fff;
     z-index: 1;
     position: absolute;
-  }
+}
